# ttd-databricks-python

./: .databrickscfg  .gitignore  CONTRIBUTING.md  LICENSE  NOTICES.txt  README.md  pyproject.toml
.devcontainer/: DOCKERFILE  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/actions/commit_pr_and_merge/: action.yaml
.github/actions/version_number/: action.yaml
.github/workflows/: build-and-publish.yaml  ci.yaml  dbx-listing.yml  import-notebooks.yml  publish-to-pypi-versioned.yaml
dbx-listing/: README.md  pyproject.toml
dbx-listing/examples/listings/example_listing/: description.md  listing.json  listing_id.json
dbx-listing/examples/listings/example_listing/notebooks/: SampleNotebook.ipynb
dbx-listing/src/dbx_listing/: actions.py  cli.py  commands.py  listing_dir.py  listing_id.py  utils.py
example_notebook/: TTD Connector Data SDK Example Notebook.ipynb  ttd_sdk_example.ipynb
tests/: test_placeholder.py
tests/unit/: conftest.py  test_batch_process_early_exit.py  test_call_api.py  test_client_helpers.py  test_contexts.py  test_exceptions.py  test_handlers_build_items.py  test_push_data.py  test_schema_validation.py  test_utils.py
ttd_databricks_python/: __init__.py
ttd_databricks_python/ttd_databricks/: __init__.py  batching.py  constants.py  contexts.py  endpoints.py  exceptions.py  id_types.py  schemas.py  ttd_client.py  utils.py
ttd_databricks_python/ttd_databricks/handlers/: advertiser.py  deletion_optout_advertiser.py  deletion_optout_merchant.py  deletion_optout_thirdparty.py  offline_conversion.py  third_party.py
ttd_databricks_python/ttd_databricks/schemas/: __init__.py  advertiser.py  deletion_optout_advertiser.py  deletion_optout_merchant.py  deletion_optout_thirdparty.py  offline_conversion.py  third_party.py
