[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttd-databricks"
version = "0.2.1"
description = "Client implementation and helper functions for integrating with the TTD Databricks services."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
authors = [
    {name = "The Trade Desk"}
]

dependencies = [
    "ttd-data>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.9.0",
    "pyspark>=3.5",  # for schema unit tests only; runtime provides its own on Databricks
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ttd_databricks_python*"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear (common bug patterns)
    "UP",  # pyupgrade (modernise syntax)
]
ignore = [
    "UP045",  # prefer Optional[X] over X | None
]

[tool.ruff.lint.isort]
known-first-party = ["ttd_databricks_python"]

[tool.pytest.ini_options]
markers = [
    "spark: marks tests that require a running SparkSession (deselect with '-m \"not spark\"')",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

